--- a/src/components/Menu/Menu.module.css
+++ b/src/components/Menu/Menu.module.css
@@ -1,5 +1,7 @@
 .menu {
   display: inline-block;
-  background-color: rgb(142, 164, 190);
+  background-color: #fefefe;
+  box-shadow: 0 0 8px rgba(0, 0, 0, .2);
   border-radius: 10px;
+  padding: 10px;
 }
