--- a/src/components/Screen/Screen.module.css
+++ b/src/components/Screen/Screen.module.css
@@ -54,17 +54,21 @@
 @keyframes slideOutToLeft {
 	from {
 		transform: translateX(0);
+		opacity: 1;
 	}
 	to {
 		transform: translateX(-100%);
+		opacity: 0;
 	}
 }
 
 @keyframes slideOutToRight {
 	from {
 		transform: translateX(0);
+		opacity: 1;
 	}
 	to {
 		transform: translateX(100%);
+		opacity: 0;
 	}
 }
