--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,16 @@
 .App {
   text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-image:#ffffff;background-image:  
+  radial-gradient(at 40% 20%, hsla(28,100%,74%,1) 0, transparent 50%),  
+  radial-gradient(at 80% 0%, hsla(189,100%,56%,1) 0, transparent 50%),  
+  radial-gradient(at 0% 50%, hsla(355,85%,93%,1) 0, transparent 50%),  
+  radial-gradient(at 100% 29%, hsla(339,100%,93%,1) 0, transparent 50%),  
+  radial-gradient(at 0% 100%, hsla(22,100%,77%,1) 0, transparent 50%),  
+  radial-gradient(at 80% 100%, hsla(243,100%,83%,1) 0, transparent 50%),  
+  radial-gradient(at 0% 0%, hsla(349,100%,100%,1) 0, transparent 50%);
 }
 
 .App-logo {
